versão com itens iniciais modificados

--- a/rathena-master/conf/battle/client.conf
+++ b/rathena-master/conf/battle/client.conf
@@ -103,7 +103,7 @@ display_version: yes
 
 // When affected with the "Hallucination" status effect, send the effect to client? (Note 1)
 // NOTE: Set to 'no' if the client lags due to the "Wavy" screen effect.
-display_hallucination: yes
+display_hallucination: 0
 
 // Set this to 1 if your client supports status change timers and you want to use them
 // Clients from 2009 onward support this
