--- a/rathena-master/conf/battle/exp.conf
+++ b/rathena-master/conf/battle/exp.conf
@@ -10,13 +10,13 @@
 //--------------------------------------------------------------
 
 // Rate at which exp. is given. (Note 2)
-base_exp_rate: 100
+base_exp_rate: 400
 
 // Rate at which job exp. is given. (Note 2)
-job_exp_rate: 100
+job_exp_rate: 400
 
 // Turn this on to allow a player to level up more than once from a kill. (Note 1)
-multi_level_up: no
+multi_level_up: yes
 
 // Allow multi level up until a certain level?
 // This only triggers if multi_level_up is enabled.
@@ -28,7 +28,7 @@ multi_level_up_job: 0
 // % of the current exp bar. (Every 10 = 1.0%)
 // For example, set it to 500 and no matter how much exp the mob gives, 
 // it can never give you above half of your current exp bar.
-max_exp_gain_rate: 0
+max_exp_gain_rate: 1000
 
 // Method of calculating earned experience when defeating a monster:
 // 0 = uses damage given / total damage as damage ratio
@@ -47,23 +47,23 @@ exp_bonus_attacker: 25
 exp_bonus_max_attacker: 12
 
 // MVP bonus exp rate. (Note 2)
-mvp_exp_rate: 100
+mvp_exp_rate: 400
 
 // Rate of base/job exp given by NPCs. (Note 2)
-quest_exp_rate: 100
+quest_exp_rate: 400
 
 // The rate of job exp. from using Heal skill (100 is the same as the heal amount, 200 is double.
 // The balance of the exp. rate is best used with 5 to 10)
-heal_exp: 0
+heal_exp: 5
 
 // The rate of exp. that is gained by the process of resurrection, a unit is 0.01%.
 // Experience calculations for the experience value * level difference of the person revived / 100 * resurrection_exp/10000 which the revived player has can be got.
-resurrection_exp: 0
+resurrection_exp: 10
 
 // The rate of job exp. when using discount and overcharge on an NPC
 // (in 0.01% increments - 100 is 1%, 10000 is normal, 20000 is double.)
 // The way it is calculated is (money received * skill lv) * shop_exp / 10000.
-shop_exp: 0
+shop_exp: 10
 
 // PVP exp.  Do players get exp in PvP maps
 // (Note: NOT exp from players, but from normal leveling)
