--- a/rathena-master/db/re/item_db_equip.yml
+++ b/rathena-master/db/re/item_db_equip.yml
@@ -57332,24 +57332,28 @@ Body:
     EquipLevelMin: 1
     Refineable: true
     Trade:
+      Override: 100
       NoDrop: true
     Script: |
       .@r = getrefine();
-      if (.@r>=3) {
-         bonus bBaseAtk,40;
-         bonus bMatk,40;
+      bonus bSPDrainValue,2;
+      if (.@r%3==0 && .@r>=3) {
+        bonus bBaseAtk,40*.@r/3;
+        bonus bMatk,40*.@r/3;
       }
       if (.@r>=6) {
-         bonus2 bAddSize,Size_Medium,8;
-         bonus2 bMagicAddSize,Size_Medium,8;
-         autobonus "{ bonus bNoSizeFix; }",10,5000;
+        bonus2 bAddSize,Size_Medium,10;
+        bonus2 bMagicAddSize,Size_Medium,10;
+        autobonus "{ bonus bNoSizeFix; }",2,5000;
       }
       if (.@r>=9) {
-         bonus2 bAddSize,Size_Medium,20;
-         bonus2 bMagicAddSize,Size_Medium,20;
+        bonus2 bAddSize,Size_Medium,20;
+        bonus2 bMagicAddSize,Size_Medium,20;
+       // bonus bBaseAtk,40;
+        //bonus bMatk,40;
       }
-      if (.@r>12) {
-         bonus bNoSizeFix;
+      if (.@r>=12) {
+        bonus bNoSizeFix;
       }
   - Id: 13050
     AegisName: P_Dagger1
@@ -153125,6 +153129,45 @@ Body:
       }
       if (.@r>=11) {
          bonus2 bSkillAtk,"GN_CART_TORNADO",25;
+      }
+  - Id: 500009
+    AegisName: Lamina_Sagrada
+    Name: Lamina_Sagrada
+    Type: Weapon
+    SubType: 1hSword
+    View: 42
+    Buy: 20
+    Weight: 175
+    Attack: 200
+    MagicAttack: 175
+    Range: 3
+    Slots: 1
+    Locations:
+      Right_Hand: true
+    WeaponLevel: 4
+    EquipLevelMin: 99
+    Refineable: true
+    Script: |
+      bonus bStr,10;
+      bonus bint,10;
+      bonus bUnbreakableWeapon;
+      if (BaseLevel==99) {
+        bonus2 bResEff,Eff_Silence,2000;
+        bonus2 bResEff, Eff_Stun ,2000;
+        bonus2 bMagicAtkEle,Ele_Holy,30;
+        .@r = getrefine();
+        if(.@r>=1){
+          bonus2 bAddClass,Class_All,.@r*3;
+        }
+      }
+      if (BaseLevel>=100) {
+        bonus2 bResEff,Eff_Silence,5000;
+        bonus2 bResEff, Eff_Stun ,5000;
+        bonus2 bMagicAtkEle,Ele_Holy,100;
+        .@r = getrefine();
+        if(.@r>=1){
+          bonus2 bAddClass,Class_All,.@r*10;
+        }
       }
   - Id: 500013
     AegisName: Up_Sword_Of_Bluefire
