--- a/rathena-master/conf/msg_conf/char_msg.conf
+++ b/rathena-master/conf/msg_conf/char_msg.conf
@@ -1,10 +1,10 @@
 // rAthena msg_athena.conf
 // Message Configuration of char-server
 // -----------------------
-0: Aprendiz
-1: Espadachim
-2: Mago
-3: Arqueiro
+0: Novice
+1: Swordsman
+2: Magician
+3: Archer
 4: Acolyte
 5: Merchant
 6: Thief
@@ -129,19 +129,19 @@
 119: Soul Reaper
 120: Baby Star Emperor
 121: Baby Soul Reaper
-122: Cavaleiro Draconico
-123: Mestre Mecanico
-124: Executor Sombrio
-125: Mestre Arcano
-126: Cardeal
-127: Falcao do Vento
-128: Guarda Imperial
-129: Biologo
-130: Perseguidor das Profundezas
-131: Mestre Elemental
-132: Inquisidor
-133: Aedo
-134: Trovadora
+122: Dragon Knight
+123: Meister
+124: Shadow Cross
+125: Arch Mage
+126: Cardinal
+127: Windhawk
+128: Imperial Guard
+129: Biolo
+130: Abyss Chaser
+131: Elemental Master
+132: Inquisitor
+133: Troubadour
+134: Trouvere
 135: Sky Emperor
 136: Soul Ascetic
 137: Shinkiro
