--- a/rathena-master/conf/msg_conf/map_msg.conf
+++ b/rathena-master/conf/msg_conf/map_msg.conf
@@ -1,29 +1,3 @@
-// rAthena map_msg_por.conf
-// Configuração das Mensagens
-// Para traduzir, modifique a mensagem (segunda linha), não é preciso modificar o código-fonte,
-// ou alternativamente, use conf/import/map_msg_por_conf.txt
-// Formato:
-// // Mensagem em inglês
-// msg_number: mensagem traduzida
-
-// Brazilian Portuguese Translation by mkbu95
-// Brazilian Portuguese Translation by Mahiro
-
-// If you find any error or typo in this translation, please send me a private message at rAthena.org forums
-// Caso você encontre algum erro de tradução ou gramatical, me envie uma mensagem pessoal no fórum do rAthena.org
-
-//   0-410: reservado para comandos de Game Master
-// 500-900 reservado para outros
-// 900-1300: @atcommand
-
-// Para desabilitar um campo de string (%s), torne seu tamanho máximo 0:
-// exemplo:
-// 270: *%s %s* (formato do @me)
-// 270: *%.0s%s* (removido o nome do personagem do comando)
-
-// Mensagem de Comandos de Game Master
-// -----------------------
-
 0: Movido.
 1: Mapa não encontrado.
 2: Coordenadas inválidas, usando alvo aleatório.
@@ -861,10 +835,72 @@
 790: <MSG>3456,%d</MSG>
 791: Você não tem permissão para usar o sistema de atendimento.
 
-//792-899 free
+
+// Private Airship
+792: The private airship system is disabled.
+
+793: Usage @camerainfo range rotation latitude
+
+// pcblock command
+794: This action is currently blocked.
+
+// @reloadattendancedb
+795: Attendance database has been reloaded.
+
+// NoRODEX Mapflag
+796: You cannot use RODEX on this map.
+
+797: This command is unavailable to non-4th class.
+
+// @stylist
+798: This command requires packet version 2015-11-04 or newer.
+799: You have already opened the stylist UI.
+
+800: Cav. Dracônico
+801: Mestre Mecânico
+802: Executor Sombrio
+803: Mestre Arcano
+804: Cardeal
+805: Windhawk
+806: Guarda Imperial
+807: Biólogo
+808: Perseguidor Sombrio
+809: Mestre Elemental
+810: Inquisidor
+811: Aedo
+812: Trovadora
+813: Sky Emperor
+814: Soul Ascetic
+815: Shinkiro
+816: Shiranui
+817: Night Watch
+818: Veterano
+819: Druída
+
+// @trpoint
+820: Please enter a number (usage: @trpoint <number of points>).
+
+// @chargeap
+821: AP Recuperado.
+822: AP Modificado.
+823: AP Foi Recuperado.
+
+// @displayskillcast
+824: Usage: @displayskillcast <skill ID> {<skill level> <ground target flag> <cast time>}
+
+// @displayskill (2nd Message Line)
+825: Effect Types: 0: All, 1: Damage, 2: Splash Dmg, 3: No Damage, 4: Ground
+
+// @displayskillunit
+826: Usage: @displayskillunit <unit ID> {<skill level> <range>}
+
+// @mobinfo RES/MRES
+827:  RES:%d  MRES:%d
+
+//828-899 free
 
 //------------------------------------
-// Mais mensagens de atcommand
+// More atcommands message
 //------------------------------------
 
 // @send
