--- a/rathena-master/db/re/item_db_usable.yml
+++ b/rathena-master/db/re/item_db_usable.yml
@@ -42906,7 +42906,7 @@ Body:
     Flags:
       NoConsume: true
     Delay:
-      Duration: 1200000
+      Duration: 50
     Trade:
       NoDrop: true
       NoTrade: true
