--- a/rathena-master/db/re/mob_db.yml
+++ b/rathena-master/db/re/mob_db.yml
@@ -90900,8 +90900,48 @@ Body:
 #    AegisName: MD_VENOM_BUG
 #  - Id: 20345
 #    AegisName: MD_CONSTANT
-#  - Id: 20346
-#    AegisName: MD_MIGUEL
+  - Id: 20346
+    AegisName: MD_MIGUEL
+    Name: Miguel
+    Level: 115
+    Hp: 8600000
+    BaseExp: 1200000
+    JobExp: 900000
+    Attack: 4350
+    Attack2: 2450
+    Defense: 216
+    MagicDefense: 95
+    Str: 192
+    Agi: 115
+    Vit: 28
+    Int: 66
+    Dex: 179
+    Luk: 85
+    AttackRange: 1
+    SkillRange: 10
+    ChaseRange: 12
+    Size: Medium
+    Race: Demihuman
+    Element: Wind
+    ElementLevel: 4
+    WalkSpeed: 250
+    AttackDelay: 872
+    AttackMotion: 1044
+    DamageMotion: 432
+    Ai: 21
+    Class: Boss
+    Drops:
+      - Item: Tiger's_Skin
+        Rate: 3000
+      - Item: EP17_1_EVT02
+        Rate: 1000
+      - Item: EP17_1_EVT01
+        Rate: 1000
+      - Item: EP17_1_EVT39
+        Rate: 1000
+      - Item: Miguel_Card
+        Rate: 1
+        StealProtected: true
 #  - Id: 20347
 #    AegisName: MD_MIGUEL_G
 #  - Id: 20348
@@ -90918,9 +90958,52 @@ Body:
 #    AegisName: MD_CROB
 #  - Id: 20354
 #    AegisName: E_FINE_DUST
-#  - Id: 20355
-#    AegisName: EP17_1_BELLARE1
-#  - Id: 20356
+  - Id: 20355
+    AegisName: EP17_1_BELLARE1
+    Name: Heart Hunter Bellare
+    Level: 120
+    Hp: 29619
+    BaseExp: 3291
+    JobExp: 2633
+    Attack: 840
+    Attack2: 424
+    Defense: 146
+    MagicDefense: 27
+    Str: 56
+    Agi: 72
+    Vit: 43
+    Int: 53
+    Dex: 131
+    Luk: 67
+    AttackRange: 9
+    SkillRange: 10
+    ChaseRange: 12
+    Size: Medium
+    Race: Demihuman
+    Element: Neutral
+    ElementLevel: 2
+    WalkSpeed: 200
+    AttackDelay: 864
+    AttackMotion: 1268
+    DamageMotion: 480
+    Ai: 19
+    Drops:
+      - Item: Heart_Hunter_Seal
+        Rate: 1250
+      - Item: Elunium_Stone
+        Rate: 150
+      - Item: Elunium
+        Rate: 12
+      - Item: EP17_1_EVT39
+        Rate: 1000
+      - Item: EP17_1_EVT02
+        Rate: 1000
+      - Item: Explosive_Powder
+        Rate: 30
+      - Item: Bellare_Card
+        Rate: 1
+        StealProtected: true
+ #  - Id: 20356
 #    AegisName: EP17_1_BELLARE2
 #  - Id: 20357
 #    AegisName: EP17_1_SANARE1
@@ -90930,16 +91013,140 @@ Body:
 #    AegisName: EP17_1_PLAGA1
 #  - Id: 20360
 #    AegisName: EP17_1_PLAGA2
-#  - Id: 20361
-#    AegisName: EP17_1_DOLOR1
+  - Id: 20361
+    AegisName: EP17_1_DOLOR1
+    Name: Dolor
+    Level: 122
+    Hp: 40204
+    BaseExp: 4467
+    JobExp: 3574
+    Attack: 1129
+    Attack2: 561
+    Defense: 227
+    MagicDefense: 28
+    Str: 74
+    Agi: 71
+    Vit: 83
+    Int: 69
+    Dex: 111
+    Luk: 2
+    AttackRange: 5
+    SkillRange: 10
+    ChaseRange: 12
+    Size: Medium
+    Race: Demihuman
+    Element: Poison
+    ElementLevel: 2
+    WalkSpeed: 200
+    AttackDelay: 1768
+    AttackMotion: 768
+    DamageMotion: 576
+    Ai: 19
+    Drops:
+      - Item: Tough_Scalelike_Stem
+        Rate: 1250
+      - Item: Sticky_Poison
+        Rate: 1000
+      - Item: Wooden_Block
+        Rate: 1000
+      - Item: EP17_1_EVT39
+        Rate: 1000
+      - Item: Bloody_Rune
+        Rate: 800
+      - Item: Dolor_Card
+        Rate: 1
+        StealProtected: true
 #  - Id: 20362
 #    AegisName: EP17_1_DOLOR2
-#  - Id: 20363
-#    AegisName: EP17_1_VENENUM1
-#  - Id: 20364
+  - Id: 20363
+    AegisName: EP17_1_VENENUM1
+    Name: Venenum
+    Level: 123
+    Hp: 40720
+    BaseExp: 4449
+    JobExp: 3574
+    Attack: 1184
+    Attack2: 320
+    Defense: 242
+    MagicDefense: 27
+    Str: 77
+    Agi: 37
+    Vit: 90
+    Int: 39
+    Dex: 103
+    Luk: 3
+    AttackRange: 1
+    SkillRange: 10
+    ChaseRange: 12
+    Size: Medium
+    Race: Brute
+    Element: Poison
+    ElementLevel: 2
+    WalkSpeed: 200
+    AttackDelay: 768
+    AttackMotion: 792
+    DamageMotion: 432
+    Ai: 19
+    Drops:
+      - Item: Sticky_Mucus
+        Rate: 1250
+      - Item: Sticky_Poison
+        Rate: 1000
+      - Item: Fluorescent_Liquid
+        Rate: 800
+      - Item: Elunium_Stone
+        Rate: 120
+      - Item: Elunium
+        Rate: 10
+      - Item: EP17_1_EVT39
+        Rate: 1000
+      - Item: Venenum_Card
+        Rate: 1
+        StealProtected: true
 #    AegisName: EP17_1_VENENUM2
-#  - Id: 20365
-#    AegisName: EP17_1_TWIN_CAPUT1
+  - Id: 20365
+    AegisName: EP17_1_TWIN_CAPUT1
+    Name: Twin Caput
+    Level: 125
+    Hp: 41735
+    BaseExp: 4637
+    JobExp: 3710
+    Attack: 1047
+    Attack2: 408
+    Defense: 269
+    MagicDefense: 27
+    Str: 67
+    Agi: 45
+    Vit: 103
+    Int: 49
+    Dex: 90
+    Luk: 30
+    AttackRange: 1
+    SkillRange: 10
+    ChaseRange: 12
+    Size: Medium
+    Race: Demihuman
+    Element: Dark
+    ElementLevel: 2
+    WalkSpeed: 220
+    AttackDelay: 936
+    AttackMotion: 1020
+    DamageMotion: 420
+    Ai: 19
+    Drops:
+      - Item: Rune_Of_Darkness
+        Rate: 1250
+      - Item: Piece_Of_Darkness
+        Rate: 1000
+      - Item: Tooth_Of_
+        Rate: 800
+      - Item: Tendon
+        Rate: 1000
+      - Item: EP17_1_EVT39
+        Rate: 1000
+      - Item: Caput_Card
+        Rate: 1
+        StealProtected: true
 #  - Id: 20366
 #    AegisName: EP17_1_TWIN_CAPUT2
 #  - Id: 20367
